--- a/index.css
+++ b/index.css
@@ -414,8 +414,8 @@ h1 > span {
     position: relative;
     z-index: 1;
     padding: 0px 20px;
+    /*transition: margin-left .5s;*/
 }
-
 
 .opinion {
     width: 400px;
